--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -42,3 +42,27 @@ jobs:
       
       - name: Run PHP Security Checker
         run: composer require --dev enlightn/security-checker && ./vendor/bin/security-checker security:check
+
+ auto-merge:
+    runs-on: ubuntu-latest
+    needs: [js-security-scan, php-security-scan]
+    steps:
+      - name: Merge pull request
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+        uses: actions/github-script@v7.0.1
+        with:
+          script: |
+            const { data: pullRequest } = await github.pulls.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number,
+            });
+
+            if (pullRequest.state === 'open' && pullRequest.mergeable && pullRequest.mergeable_state === 'clean') {
+              await github.pulls.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: context.payload.pull_request.number,
+                merge_method: 'merge',
+              });
+            }
